# gir-to-d

./: COPYING  GNUmakefile  README.md  Readme_APILookup  dub.json  meson.build  meson_options.txt
source/: girtod.d
source/gtd/: DefReader.d  GirAlias.d  GirConstant.d  GirEnum.d  GirField.d  GirFunction.d  GirPackage.d  GirStruct.d  GirType.d  GirVersion.d  GirWrapper.d  GlibTypes.d  GtkAlias.d  GtkEnum.d  GtkFunction.d  GtkPackage.d  GtkStruct.d  GtkType.d  GtkWrapper.d  IndentedStringBuilder.d  LinkedHasMap.d  Log.d  WrapError.d  WrapException.d  XMLReader.d
wrap/: APILookup.txt
wrap/meson/: create-temp-girtod.py  generate-bindings.py
